# texsmith

./: .editorconfig  .gitignore  AGENT.md  CHANGELOG.md  DEVEL.md  Makefile  README.md  REFACTOR.md  UPGRADE.md  fonts-test.tex  log  mkdocs.yml  noxfile.py  pyproject.toml  pyrightconfig.json  test.md  test.tex  versions.json
.github/issues/: plain-md-caption-inline-formatting.md
.github/workflows/: ci.yml
.wiki/: README.md
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/about/: index.html
0.0.1/api/: index.html
0.0.1/cli/: index.html
0.0.1/css/: extra.css
0.0.1/examples/: index.html
0.0.1/search/: search_index.json
0.0.1/syntax/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/about/: index.html
0.2.0/api/: index.html
0.2.0/assets/: cli-help  mermaid.mmd
0.2.0/cli/: index.html
0.2.0/examples/: index.html
0.2.0/search/: search_index.json
0.2.0/syntax/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/about/: index.html
0.2.1/api/: index.html
0.2.1/assets/: cli-help
0.2.1/cli/: index.html
0.2.1/examples/: index.html
0.2.1/search/: search_index.json
0.2.1/syntax/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/about/: index.html
0.2.2/api/: index.html
0.2.2/cli/: index.html
0.2.2/examples/: index.html
0.2.2/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/api/: index.html
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  objects.inv  sitemap.xml
PLAN/: phase-01-baseline.md  phase-02-attributes.md  phase-03-templates.md  phase-04-fragments.md  phase-05-partials.md  phase-06-discovery-cli.md  phase-07-docs-migration.md  phase-08-cleanup.md
debug/: chinese  fallback_summary_from_file.py  noto_fonts_for_codepoint.py
docs/: .nav.yml  api.md  getting-started.md  index.md  mermaid.md  overview.md  workflow.drawio
examples/: Makefile  cheese.md  common.mk  counter.py  diagrams.md  hello_world_api.py
experiments/: buildindex.py  counter.py  footnotes.py  md2html.py  parseindex.py  tables.py
latest/: 404.html  index.html
latex/: __init__.py  cli.py  config.py  context.py  formatter.py  renderer.py  rules.py  utils.py
latex_template_article/: cookiecutter.json  pyproject.toml
latex_template_book/: cookiecutter.json  pyproject.toml
mkdocs_latex/: .editorconfig  .markdownlint.yaml  mkdocs.yml  pyproject.toml
mkdocs_latex/docs/: about.md  index.md
mkdocs_latex/src/mkdocs_plugin_latex/: __init__.py  plugin.py
old-code-base/: formatters.py  pipeline.py  renderer.py  transformers.py  utils.py
prompts/: 01-architecture-overhaul.txt  02-conversion-service.txt  03-template-renderer.txt  04-slot-mapping.txt  05-diagnostic-emitter.txt  06-final-hardening.txt
refactoring/: PLAN.md  PROGRESS.md  README.md  agents.md  workflow.md
sandbox/: .gitignore  build.py  build_db.py  build_ucharclasses_json.py  c.json  classes.json  generate_header_with_texsmith.py  generate_latex_header.py  generate_latex_snippet.py  get_classes.py  get_fonts.py  header.sty  latex_snippet.jinja  look.py  lookup.py  noto_coverage_db.json  noto_coverage_db.json.bkp  noto_lookup.pkl  test.tex  ucharclasses.json  ucharclasses.sty  update_ucharclasses_fonts.py
scripts/: check_docs.sh  debug_fallback_file.py  exporter_remote.py  fonts.txt  generate_examples.py  generate_noto_dataset.py  inspect_ucharclasses.py  install_noto_syriac.sh  install_noto_syriac_western.sh  list_scripts_fonts.py  lookup_groups_from_extract.py  parse_missing_fonts.py  playwright_mermaid_direct.py  playwright_mermaid_smoke.py  playwright_smoke.py  refresh_cli_help.sh  run_example_smoke_tests.sh  texsmith_convert_simple.py  texsmith_full_conversion.py
templates/: README.md
templates/carauma/: README.md  __init__.py  main.tex  manifest.toml  pyproject.toml
templates/carauma/assets/: carauma-options.sty
templates/carauma/content/: chapter1.tex
templates/carauma/frontmatter/: backpage.tex  preface.tex  titlepage.tex  tocpage.tex
templates/carauma/misc/: options.sty
templates/carauma/template/: template.tex
templates/carauma/template/frontmatter/: backpage.tex  copyrightpage.tex  preface.tex  titlepage.tex
templates/els-cas/: README.md  __init__.py  manifest.toml  pyproject.toml
templates/els-cas/assets/: latexmkrc
templates/els-cas/template/: template.tex
templates/epfl/: README.md  __init__.py  manifest.toml  pyproject.toml
templates/epfl/template/: template.tex
templates/letter/: README.md  __init__.py  demo.md  manifest.toml  pyproject.toml
templates/letter/template/: template.tex
templates/mdpi/: README.md  __init__.py  manifest.toml  pyproject.toml
templates/mdpi/assets/Definitions/: journalnames.tex  mdpi.cls
templates/mdpi/examples/original/: template.tex
templates/mdpi/template/: template.tex
templates/nature/: README.md  __init__.py  manifest.toml  pyproject.toml
templates/nature/overrides/: table.tex
templates/nature/template/: template.tex
tests/: test_admonitions.py  test_api_service.py  test_article_template.py  test_assets.py  test_attribute_normalisers.py  test_attribute_ownership.py  test_baseline_regressions.py  test_bibliography.py  test_bibliography_fragment.py  test_blocks.py  test_callouts.py  test_citations.py  test_cli.py  test_cli_bibliography.py  test_cli_convert.py  test_cli_templates_commands.py  test_code_engines.py  test_combining_marks.py  test_counter_extension.py  test_data_script_rendering.py  test_dependency_warnings.py  test_diagnostics.py  test_diagrams_backend.py  test_docker.py  test_document_date.py  test_document_state.py  test_document_version.py  test_engine_helpers.py  test_extra_fragment.py  test_fallback_cache_refresh.py  test_fonts_blocks.py  test_fonts_cache.py  test_fonts_emoji.py  test_fonts_fallback.py  test_fonts_locator.py  test_fonts_matcher.py  test_fonts_selection.py  test_formatting.py  test_fragment_configs.py  test_fragment_resolution.py  (+63 more)
(+1760 files in other folders)
