[project]
name = "texsmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cairosvg>=2.8.2",
    "emoji>=2.12.1",
    "jinja2>=3.1.6",
    "latexcodec>=2.0.1",
    "mkdocs-material>=9.6.22",
    "pillow>=12.0.0",
    "pydantic>=2.7.0",
    "pypdf>=6.1.1",
    "pyyaml>=6.0.3",
    "pymdown-extensions>=10.9",
    "requests>=2.32.5",
    "python-slugify>=8.0.4",
    "pygments>=2.18.0",
    "typer>=0.12.5",
    "markdown>=3.7",
    "python-markdown-math>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/texsmith"]

[tool.hatch.build]
exclude = [
    ".uv-cache",
    "build",
    "examples",
    "experiments",
    "templates",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".uv-cache",
    "build",
    "examples",
    "experiments",
    "templates",
]

[project.scripts]
texsmith = "texsmith.cli:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.ruff]
extend-exclude = ["old-code-base", "examples", "experiments", "templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]   # Pycodestyle, Pyflakes, import sorting, Bugbear & PyUpgrade

[tool.ruff.lint.per-file-ignores]
"src/texsmith/cli.py" = ["B008"]

[tool.ruff.lint.isort]
# options utiles
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["texsmith"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
lines-after-imports = 2
