[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "texsmith"
dynamic = ["version"]
description = "A Markdown to LaTeX converter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yves Chevallier", email = "yves.chevalier@heig-vd.ch" }
]
keywords = [
    "extensions",
    "markdown",
    "latex",
    "mkdocs",
    "convert"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "emoji>=2.12.1",
    "jinja2>=3.1.6",
    "markdown>=3.7",
    "pint>=0.24",
    "pybtex>=0.24.0",
    "pydantic>=2.7.0",
    "pygments>=2.18.0",
    "pylatexenc>=2.10",
    "pymdown-extensions>=10.9",
    "python-markdown-math>=0.9",
    "pymupdf>=1.24.3",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "rich>=13.9.0",
    "typer>=0.12.5",
    "tomli>=2.0.1; python_version < \"3.11\"",
    "unicodeblocks>=0.3",
    "playwright>=1.56.0",
    "pyxindy>=0.0.3",
]
[project.urls]
Homepage = "https://github.com/yves-chevallier/texsmith"

[project.entry-points."markdown.extensions"]
"texsmith.index" = "texsmith.index:TexsmithIndexExtension"
"texsmith.texlogos" = "texsmith.texlogos:TexLogosExtension"
"texsmith.smallcaps" = "texsmith.smallcaps:SmallCapsExtension"
"texsmith.latex_raw" = "texsmith.latex_raw:LatexRawExtension"
"texsmith.rawlatex" = "texsmith.rawlatex:RawLatexExtension"
"texsmith.latex_text" = "texsmith.latex_text:LatexTextExtension"
"texsmith.missing_footnotes" = "texsmith.missing_footnotes:MissingFootnotesExtension"
"texsmith.multi_citations" = "texsmith.multi_citations:MultiCitationExtension"
"texsmith.mermaid" = "texsmith.mermaid:MermaidExtension"
"texsmith.quotes" = "texsmith.quotes:TexsmithQuotesExtension"

[project.entry-points."texsmith.renderers"]
"texsmith.index" = "texsmith.index:register_renderer"
"texsmith.texlogos" = "texsmith.texlogos:register_renderer"

[project.entry-points."mkdocs.plugins"]
"texsmith.index" = "texsmith.index:IndexPlugin"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["src/texsmith"]

[tool.hatch.build]
exclude = [
    "/.uv-cache",
    "/build",
    "/examples",
    "/experiments",
    "/templates",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.uv-cache",
    "/build",
    "/examples",
    "/experiments",
    "/templates",
    "/mkdocs_latex"
]

[project.scripts]
texsmith = "texsmith.ui.cli.app:main"
check = "texsmith.devtools:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "nox[pbs]>=2024.4.16",
    "cairosvg>=2.8.2",
    "pillow>=12.0.0",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "pytest-cov>=7.0.0",
    "mkdocs-texsmith ; python_version >= \"3.10\"",
    "pymupdf>=1.26.6",
]
docs = [
    "mike>=2.1.2",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-material>=9.6.22",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-drawio @ git+https://github.com/yves-chevallier/mkdocs-drawio.git@testounet",
    "mkdocs-pills>=0.1.0",
]


[tool.uv]
default-groups = ["dev", "docs"]
package = true

[tool.uv.workspace]
members = [
    "packages/mkdocs_texsmith",
]

[tool.uv.sources]
mkdocs-texsmith = { workspace = true }

[tool.pytest.ini_options]
addopts = []

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "mkdocs_latex",
  ".venv",
  "venv",
  "build",
  "sandbox",
  "templates",
  "examples",
  "experiments",
  "dist",
  "site",
  "docs/_build",
  "**/migrations",
]

fix = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
  "E","F","I","B","UP",
  "C90","N","D","ANN","C4","SIM","PTH","T20","ERA","ARG","G","TRY","DTZ","SLF","PT","RUF","A",
]
ignore = [
  "E501",  # line too long (handled by line-length)
  "F403",  # 'from module import *' used; unable to detect undefined names
  "D107",  # missing docstring in __init__
  "D202",  # No blank lines after function docstring
  "D203",  # 1 blank line required before class docstring
  "D212",  # Multi-line docstring summary should start at the first line
  "D214",  # Multi-line docstring summary should start and end on triple quotes
  "D100",  # missing docstring in public module
  "D101",  # missing docstring in public class
  "D102",  # missing docstring in public method
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public package
  "D105",  # missing docstring in magic method
  "D200",  # One-line docstring should fit on one line
  "D205",  # Blank line required between summary line and description
  "D301",  # Use raw string or escape the backslash
  "D415",  # First line of docstring should end with punctuation
  "ANN201",  # Missing return type annotation for public function
  "ARG002",  # Unused argument
  "B008",   # Function call in default argument (Typer pattern)
  "S101",    # Use of assert detected
  "TRY003",  # Catching too general exception Exception
  "ANN401",  # Missing type annotation for function argument
  "C901",  # Function is too complex
  "UP017",  # Date time issue with py310
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["texsmith"]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/texsmith/cli.py" = ["B008"]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "T20", "S101", "ANN", "ARG002", "SLF001", "PT018", "ARG001", "TRY003"]
