[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "texsmith-template-letter"
version = "0.1.0"
description = "Formal multilingual letter template for Texsmith."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Yves Chevallier", email = "yves.chevalier@heig-vd.ch" },
]
keywords = ["texsmith", "latex", "template", "letter"]
dependencies = ["texsmith>=0.6,<1.0"]

[project.urls]
Homepage = "https://github.com/yves-chevallier/texsmith"

[project.entry-points."texsmith.templates"]
letter = "texsmith_template_letter:Template"

[tool.hatch.build.targets.wheel]
exclude = ["__pycache__", "*.pyc"]

[tool.hatch.build.targets.wheel.force-include]
"." = "texsmith_template_letter"

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__", "*.pyc"]

[tool.hatch.build.targets.sdist.force-include]
"." = "texsmith_template_letter"
